--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "prepare": "npm run build"
   },
   "devDependencies": {
+    "@babel/cli": "^7.8.4",
     "babel-preset-react-app": "^9.1.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -34,7 +35,5 @@
       "last 1 safari version"
     ]
   },
-  "dependencies": {
-    "@babel/cli": "^7.8.4"
-  }
+  "dependencies": {}
 }
